<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.studentproject.AboutPageActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="138dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fotoDiri"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/fotoku" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/namaSaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="175dp"
        android:gravity="center"
        android:text="@string/said_muhammad_mazaya"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/emailSaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="176dp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textStyle="bold"

        android:text="@string/email_saya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaSaya" />

    <TextView
        android:id="@+id/hobiSaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:gravity="center_vertical"
        android:textColor="@color/gray"
        android:textStyle="bold"

        android:text="@string/hobi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSaya" />

    <TextView
        android:id="@+id/umurSaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textStyle="bold"

        android:text="@string/umur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobiSaya" />

    <TextView
        android:id="@+id/pendidikanSaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textStyle="bold"

        android:text="@string/pendidikan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/umurSaya" />
</androidx.constraintlayout.widget.ConstraintLayout>